--- a/Locator/src/Locator.Web/appsettings.json
+++ b/Locator/src/Locator.Web/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "VacanciesDb": "Host=localhost;Database=vacancies_db;Username=postgres;Password=postgres"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
