fix: fix DbContext

--- a/Locator/src/Locator.Web/appsettings.json
+++ b/Locator/src/Locator.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "VacanciesDb": "Host=localhost;Database=vacancies_db;Username=postgres;Password=postgres"
+    "VacanciesDb": "Host=localhost;Port=5432;Database=vacancies_db;Username=postgres;Password=postgres"
   },
   "Logging": {
     "LogLevel": {
