--- a/Locator/src/Locator.Infrastructure.Postgresql/Locator.Infrastructure.Postgresql.csproj
+++ b/Locator/src/Locator.Infrastructure.Postgresql/Locator.Infrastructure.Postgresql.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\src\Locator.Application\Locator.Application.csproj" />
+      <ProjectReference Include="..\Shared\Shared.csproj" />
     </ItemGroup>
 
     <ItemGroup>
