--- a/Locator/src/Locator.Web/Locator.Web.csproj
+++ b/Locator/src/Locator.Web/Locator.Web.csproj
@@ -15,11 +15,11 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\scr\Locator.Infrastructure.Postgresql\Locator.Infrastructure.Postgresql.csproj" />
       <ProjectReference Include="..\Locator.Application\Locator.Application.csproj" />
       <ProjectReference Include="..\Locator.Domain\Locator.Domain.csproj" />
       <ProjectReference Include="..\Locator.Infrastructure.Postgresql\Locator.Infrastructure.Postgresql.csproj" />
       <ProjectReference Include="..\Locator.Presenters\Locator.Presenters.csproj" />
+      <ProjectReference Include="..\Shared\Shared.csproj" />
     </ItemGroup>
 
 </Project>
