--- a/Locator/src/Locator.Infrastructure.HhApi/Locator.Infrastructure.HhApi.csproj
+++ b/Locator/src/Locator.Infrastructure.HhApi/Locator.Infrastructure.HhApi.csproj
@@ -16,6 +16,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Locator.Application\Locator.Application.csproj" />
+      <ProjectReference Include="..\Locator.Infrastructure.Postgresql\Locator.Infrastructure.Postgresql.csproj" />
     </ItemGroup>
 
 </Project>
