--- a/Locator/src/Locator.Web/appsettings.json
+++ b/Locator/src/Locator.Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "VacanciesDb": "Host=localhost;Port=5432;Database=vacancies_db;Username=postgres;Password=postgres"
+    "VacanciesDb": "Host=localhost;Port=5432;Database=vacancies_db;Username=postgres;Password=postgres",
+    "Redis": "localhost:6379"
   },
   "Logging": {
     "LogLevel": {
