fix: fix Presenters references to the Infrastructure

--- a/Locator/src/Ratings/Ratings.Contracts/Ratings.Contracts.csproj
+++ b/Locator/src/Ratings/Ratings.Contracts/Ratings.Contracts.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\Core\Shared\Shared.csproj" />
+      <ProjectReference Include="..\..\Vacancies\Vacancies.Contracts\Vacancies.Contracts.csproj" />
     </ItemGroup>
 
 </Project>
