--- a/Locator/src/Locator.ApiGateway/ApiGateway.Web/Properties/launchSettings.json
+++ b/Locator/src/Locator.ApiGateway/ApiGateway.Web/Properties/launchSettings.json
@@ -1,12 +1,12 @@
 ﻿{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "Vacancies.Web": {
+    "ApiGateway.Web": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
-      "applicationUrl": "https://localhost:5002",
-      "launchUrl": "https://localhost:5002/swagger/index.html",
+      "launchBrowser": true,
+      "applicationUrl": "https://localhost:5003",
+      "launchUrl": "https://localhost:5003/swagger/index.html",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
