--- a/Locator/src/Locator.Ratings/Ratings.Web/Properties/launchSettings.json
+++ b/Locator/src/Locator.Ratings/Ratings.Web/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "Ratings.Web": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:5001",
       "launchUrl": "https://localhost:5001/swagger/index.html",
       "environmentVariables": {
