--- a/Locator/src/Locator.Ratings/Ratings.Application/Ratings.Application.csproj
+++ b/Locator/src/Locator.Ratings/Ratings.Application/Ratings.Application.csproj
@@ -14,4 +14,8 @@
       <ProjectReference Include="..\Ratings.Domain\Ratings.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Confluent.Kafka" Version="2.12.0" />
+    </ItemGroup>
+
 </Project>
