--- a/Locator/src/Locator.Vacancies/Vacancies.Application/Vacancies.Application.csproj
+++ b/Locator/src/Locator.Vacancies/Vacancies.Application/Vacancies.Application.csproj
@@ -15,6 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Confluent.Kafka" Version="2.12.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
     </ItemGroup>
 
