--- a/Locator/src/Locator.Vacancies/Vacancies.Tests/Vacancies.Tests.csproj
+++ b/Locator/src/Locator.Vacancies/Vacancies.Tests/Vacancies.Tests.csproj
@@ -5,6 +5,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
+        <RootNamespace>Vacancies.Test</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
