--- a/Locator/src/Locator.Core/Infrastructure/Redis/Redis.Tests/Redis.Tests.csproj
+++ b/Locator/src/Locator.Core/Infrastructure/Redis/Redis.Tests/Redis.Tests.csproj
@@ -5,7 +5,6 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
-        <RootNamespace>Ratings.Test</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -13,10 +12,9 @@
         <PackageReference Include="coverlet.collector" Version="6.0.2"/>
         <PackageReference Include="FluentAssertions" Version="8.8.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.12" />
+        <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="10.0.2" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0"/>
-        <PackageReference Include="Moq" Version="4.20.72" />
-        <PackageReference Include="Testcontainers.Kafka" Version="4.10.0" />
-        <PackageReference Include="Testcontainers.PostgreSql" Version="4.10.0" />
+        <PackageReference Include="Testcontainers.Redis" Version="4.10.0" />
         <PackageReference Include="xunit" Version="2.9.2"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2"/>
     </ItemGroup>
@@ -26,8 +24,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Ratings.Presenters\Ratings.Presenters.csproj" />
-      <ProjectReference Include="..\Ratings.Web\Ratings.Web.csproj" />
+      <ProjectReference Include="..\..\..\..\Locator.Users\Users.Web\Users.Web.csproj" />
+      <ProjectReference Include="..\Redis.Contracts\Redis.Contracts.csproj" />
     </ItemGroup>
 
 </Project>
