--- a/Locator/src/Locator.Users/Users.Tests/Users.Tests.csproj
+++ b/Locator/src/Locator.Users/Users.Tests/Users.Tests.csproj
@@ -13,6 +13,7 @@
         <PackageReference Include="FluentAssertions" Version="8.8.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.12" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0"/>
+        <PackageReference Include="Moq" Version="4.20.72" />
         <PackageReference Include="Testcontainers" Version="4.10.0" />
         <PackageReference Include="Testcontainers.PostgreSql" Version="4.10.0" />
         <PackageReference Include="xunit" Version="2.9.2"/>
