--- a/Locator/src/Locator.Vacancies/Vacancies.Tests/Vacancies.Tests.csproj
+++ b/Locator/src/Locator.Vacancies/Vacancies.Tests/Vacancies.Tests.csproj
@@ -12,6 +12,7 @@
         <PackageReference Include="AutoFixture" Version="5.0.0-preview0012" />
         <PackageReference Include="coverlet.collector" Version="6.0.2"/>
         <PackageReference Include="FluentAssertions" Version="8.8.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.12" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0"/>
         <PackageReference Include="Moq" Version="4.20.72" />
         <PackageReference Include="xunit" Version="2.9.2"/>
@@ -26,6 +27,7 @@
       <ProjectReference Include="..\..\Locator.Core\Shared\Shared.csproj" />
       <ProjectReference Include="..\Vacancies.Application\Vacancies.Application.csproj" />
       <ProjectReference Include="..\Vacancies.Presenters\Vacancies.Presenters.csproj" />
+      <ProjectReference Include="..\Vacancies.Web\Vacancies.Web.csproj" />
     </ItemGroup>
 
 </Project>
